<resources>
    <string name="app_name">MemeGram</string>
    <string name="next">Next</string>
    <string name="share">Share</string>
    <string name="meme_show_here">meme Show here</string>
    <string name="memegramTitle">MemeGram</string>
    <string name="created_by_yash">Created By : Yash</string>
    <string name="categories">Categories</string>
    <string name="memes">Memes</string>
    <string name="wholesomememes">Wholesome <br></br> Memes</string>
    <string name="dankmemes">Dank <br></br>Memes </string>
    <string name="animememes">Anime <br></br>Memes </string>
    <string name="pubgmemes">Pubg <br></br>Memes </string>
    <string name="downloadthis">Download</string>
    <string name="swipingInfo">Swipe Left To Load Memes. </string>
    <string name="okay">Okay</string>
    <string name="about">About</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="aboutDesc">MemeGram is one such app that works through an API. Whose link is https://github.com/D3vd/Meme_Api. This app picks up meme from reddit and shows us through this api. This app have many meme categories you can choose according to your preference. MemeGram is not affiliated to Reddit in any manner.\n\nMemeGram Created by Yashveer Singh</string>
    <string name="privacydesc">Yashveer Singh built the MemeGram app as a Free app. This SERVICE is provided by Yashveer Singh at no cost and is intended for use as is.

This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.

If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.\n

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at MemeGram unless otherwise defined in this Privacy Policy.
        \n\nInformation Collection and Use\n\n

For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.

The app does use third party services that may collect information used to identify you.

Link to privacy policy of third party service providers used by the app

Google Play Services
Google Analytics for Firebase\n\n
Log Data\n\n

I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.

\n\nCookies\n\n

Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.

This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

\n\nService Providers\n\n

I may employ third-party companies and individuals due to the following reasons:

To facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services; or
To assist us in analyzing how our Service is used.
I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

\n\nSecurity\n\n

I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.

\n\nLinks to Other Sites\n\n

This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

\n\nChildren’s Privacy\n\n

These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13 years of age. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.

\n\nChanges to This Privacy Policy\n\n

I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.

This policy is effective as of 2021-08-02

\n\nContact Us\n\n

If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at yashveersingh30401@gmail.com.

This privacy policy page was created at privacypolicytemplate.net and modified/generated by App Privacy Policy Generator</string>
    <string name="disclaimerdesc">\n\nDisclaimer\n\n
This disclaimer (“Disclaimer”) sets forth the general guidelines, disclosures, and terms of your use of the “MemeGram” mobile application (“Mobile Application” or “Service”) and any of its related products and services (collectively, “Services”). This Disclaimer is a legally binding agreement between you (“User”, “you” or “your”) and this Mobile Application developer (“Operator”, “we”, “us” or “our”). If you are entering into this agreement on behalf of a business or other legal entity, you represent that you have the authority to bind such entity to this agreement, in which case the terms “User”, “you” or “your” shall refer to such entity. If you do not have such authority, or if you do not agree with the terms of this agreement, you must not accept this agreement and may not access and use the Mobile Application and Services. By accessing and using the Mobile Application and Services, you acknowledge that you have read, understood, and agree to be bound by the terms of this Disclaimer. You acknowledge that this Disclaimer is a contract between you and the Operator, even though it is electronic and is not physically signed by you, and it governs your use of the Mobile Application and Services.

\n\nRepresentation\n\n
Any views or opinions represented in the Mobile Application are personal and belong solely to the Operator and do not represent those of people, institutions or organizations that the Operator may or may not be associated with in professional or personal capacity unless explicitly stated. Any views or opinions are not intended to malign any religion, ethnic group, club, organization, company, or individual.

\n\nContent and postings\n\n
You may print or copy any part of the Mobile Application and Services for your personal or non-commercial use.

\n\nIndemnification and warranties\n\n
While we have made every attempt to ensure that the information contained in the Mobile Application is correct, the Operator is not responsible for any errors or omissions, or for the results obtained from the use of this information. All information in the Mobile Application is provided “as is”, with no guarantee of completeness, accuracy, timeliness or of the results obtained from the use of this information, and without warranty of any kind, express or implied. In no event will the Operator be liable to you or anyone else for any decision made or action taken in reliance on the information in the Mobile Application, or for any consequential, special or similar damages, even if advised of the possibility of such damages. Information contained in the Mobile Application are subject to change at any time and without warning.

\n\nChanges and amendments\n\n
We reserve the right to modify this Disclaimer or its terms related to the Mobile Application and Services at any time at our discretion. When we do, we will revise the updated date at the bottom of this page. We may also provide notice to you in other ways at our discretion, such as through the contact information you have provided.

An updated version of this Disclaimer will be effective immediately upon the posting of the revised Disclaimer unless otherwise specified. Your continued use of the Mobile Application and Services after the effective date of the revised Disclaimer (or such other act specified at that time) will constitute your consent to those changes.

\n\nAcceptance of this disclaimer\n\n
You acknowledge that you have read this Disclaimer and agree to all its terms and conditions. By accessing and using the Mobile Application and Services you agree to be bound by this Disclaimer. If you do not agree to abide by the terms of this Disclaimer, you are not authorized to access or use the Mobile Application and Services. This disclaimer was created with the disclaimer generator.

\n\nContacting us\n\n
If you have any questions, concerns, or complaints regarding this Disclaimer, we encourage you to contact us using the details below:

yashveersingh30401@gmail.com

This document was last updated on August 2, 2021</string>
    <string name="programmermemestoolbar">ProgrammmerMemes</string>
</resources>