<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/programmerMemesLayout"
    tools:context=".programmerMemes">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/programmermemestoolbar"
            app:titleTextColor="@color/white"

            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/memeImageView"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:contentDescription="@string/meme_show_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:srcCompat="@tools:sample/avatars" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="150dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memeImageView">

        <Button
            android:id="@+id/shareButton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif"
            android:onClick="share"
            android:background="@drawable/sharebutton"
            android:text="@string/share"
            android:textColor="@color/pink"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/downloadButton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:background="@drawable/nextbutton"
            android:onClick="downloadMeme"
            android:layout_margin="10dp"
            android:text="@string/downloadthis"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>