<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/memeImageView"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:contentDescription="@string/meme_show_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/downloadButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="283dp"
        android:layout_marginLeft="283dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:onClick="downloadMeme"
        android:background="@drawable/downloadicon"
        android:padding="12dp"
        android:paddingStart="8dp"
        android:paddingLeft="20dp"
        android:paddingEnd="25dp"
        android:paddingRight="20dp"
        app:backgroundTint="@color/downloadButton"
        app:icon="@drawable/ic_baseline_arrow_downward_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="150dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memeImageView">

        <Button
            android:id="@+id/shareButton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif"
            android:onClick="share"
            android:background="@drawable/sharebutton"
            android:text="@string/share"
            android:textColor="@color/pink"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif"
            android:onClick="next"
            android:background="@drawable/nextbutton"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>